--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   bdk_flutter:
     git:
       url: https://github.com/XLTBLX-Tech/bdk-flutter.git
-      ref: v0.24
+      ref: master
 dev_dependencies:
   flutter_test:
     sdk: flutter
