--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  bdk_flutter:
-    git:
-      url: https://github.com/XLTBLX-Tech/bdk-flutter.git
-      ref: master
+  bdk_flutter: ^0.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
