--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  bdk_flutter: ^0.3.0
+  bdk_flutter:
+    git:
+      url: https://github.com/XLTBLX-Tech/bdk-flutter
+      ref: master
 
 dev_dependencies:
   flutter_test:
