--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  bdk_flutter: ^0.27.2
+  bdk_flutter:
+    git:
+      url: https://github.com/XLTBLX-Tech/bdk-flutter.git
+      ref: v0.28
 
 
 dev_dependencies:
