--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  bdk_flutter:
-    git:
-      url: https://github.com/XLTBLX-Tech/bdk-flutter.git
-      ref: v0.28
+  bdk_flutter: ^0.28.0
 
 
 dev_dependencies:
