--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bdk_flutter_quickstart
+name: bdk_flutter_demo
 description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.3.0
@@ -8,7 +8,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  bdk_flutter: ^0.28.2
+  bdk_flutter: ^0.30.0
 
 
 dev_dependencies:
