--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
+  payjoin_flutter:
+    path: "../../XLTBLXTech/payjoin/payjoin-flutter" 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
