--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,15 @@ version: 0.3.0
 environment:
   sdk: ">=2.17.1 <3.0.0"
 dependencies:
+  bdk_flutter: ^0.31.2-dev
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
-  bdk_flutter: ^0.30.0
-
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
   assets:
