--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,20 @@
-name: bdk_flutter_demo
+name: payjoin_flutter_demo
 description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.3.0
 environment:
   sdk: '>=3.2.3 <4.0.0'
 dependencies:
-  bdk_flutter: ^0.31.2-dev
+  bdk_flutter:
+    git:
+      url: https://github.com/LtbLightning/bdk-flutter
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   payjoin_flutter:
-    path: "../../XLTBLXTech/payjoin/payjoin-flutter" 
+    git:
+      url: https://github.com/LtbLightning/payjoin-flutter
+      ref: bdk-integration-fix
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
