change to mutinynet + change pjUri to late String

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,14 +3,14 @@ description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.3.0
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 dependencies:
   bdk_flutter: ^0.31.2-dev
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   payjoin_flutter:
-    path: "../../XLTBLXTech/payjoin/payjoin-flutter" 
+    git: https://github.com/LtbLightning/payjoin-flutter
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
