--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  http: ^1.2.1
   payjoin_flutter:
     git:
       url: https://github.com/LtbLightning/payjoin-flutter
