--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,8 @@ dependencies:
   http: ^1.2.1
   payjoin_flutter:
     git:
-      url: https://github.com/LtbLightning/payjoin-flutter
-      ref: main
+      url: https://github.com/kumulynja/payjoin-flutter
+      ref: session-init-extract-req-fix
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
