--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     git:
       url: https://github.com/LtbLightning/payjoin-flutter
       ref: main
+  url_launcher: ^6.3.0
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
