--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,14 @@ dependencies:
   bdk_flutter:
     git:
       url: https://github.com/LtbLightning/bdk-flutter.git
-      ref: main
+      ref: bdk-payjoin-integration-fix
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   payjoin_flutter:
     git:
       url: https://github.com/LtbLightning/payjoin-flutter
-      ref: upgrade-v20
+      ref: main
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
