--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,23 @@
-name: payjoin_flutter_demo
+name: bdk_flutter_demo
 description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.3.0
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 dependencies:
   bdk_flutter:
     git:
-      url: https://github.com/LtbLightning/bdk-flutter.git
+      url: https://github.com/LtbLightning/bdk-flutter
       ref: main
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  http: ^1.2.1
   payjoin_flutter:
     git:
-      url: https://github.com/LtbLightning/payjoin-flutter
-      ref: upgrade-v20
+      url: https://github.com/kumulynja/payjoin-flutter
+      ref: override-ffi-functions
+  url_launcher: ^6.3.0
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
