--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,8 @@ dependencies:
   http: ^1.2.1
   payjoin_flutter:
     git:
-      url: https://github.com/kumulynja/payjoin-flutter
-      ref: override-ffi-functions
+      url: https://github.com/LtbLightning/payjoin-flutter
+      ref: upgrade-v20
   url_launcher: ^6.3.0
 dev_dependencies:
   flutter_lints: ^2.0.0
