--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.1
-  payjoin_flutter:
-    git:
-      url: https://github.com/LtbLightning/payjoin-flutter
-      ref: upgrade-v20
+  payjoin_flutter: ^0.20.0
   url_launcher: ^6.3.0
 dev_dependencies:
   flutter_lints: ^2.0.0
